# OptiLine

./: README.md  pyproject.toml
maps/: ax_max_machines.csv
src/OptiLine/: KinematicProfs.py  opt_mintime.py  solvers.py  utils.py
tests/: General_test.py  General_test_optmintime.py
tests/params/: racecar.ini
