[project]
name = "OptiLine"
version = "0.1.0"
description = "Raceline optimisation tools"
authors = [
    {name = "Amir Ali Farzin", email = "amirali77farzin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "numpy>=1.24,<3",
    "scipy>=1.10,<2",
    "matplotlib>=3.7,<4",
    "quadprog>=0.1.13,<0.2",
    "casadi>=3.7,<4",
]

[tool.poetry]
packages = [{ include = "OptiLine", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
black = "^25.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
